# cloudtrail-watcher

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.en.md  README.ko.md  README.md  README.sar.md  pyproject.toml  template.sar.yaml
.amazonq/rules/: layer-python-rule.md  release-rule.md  test-modification-rule.md
.github/workflows/: build-lambda-layer.yaml  build_function_container.yaml  publish-sar.yaml
deploy/.github/workflows/: build-lambda-layer.yaml
deploy/sam/: template-with-layer.yaml  template.yaml
deploy/terraform/: .terraform.lock.hcl  main.tf  variables.tf
functions/watcher/: Dockerfile  lambda_function.py
functions/watcher/services/: __init__.py  airflow.py  cloudfront.py  common.py  dynamodb.py  ec2.py  ecr.py  ecs.py  eks.py  elasticache.py  elasticloadbalancing.py  elasticmapreduce.py  es.py  iam.py  kafka.py  lambda_.py  rds.py  redshift.py  s3.py
layer/python/cloudtrail_watcher/: event_handler.py  utils.py
test/services/: test_process_event_by_service.py  test_services.py
test/services/samples/: airflow_CreateEnvironment.json  cloudfront_CreateDistribution.json  dynamodb_CreateTable.json  ec2_AuthorizeSecurityGroupEgress.json  ec2_AuthorizeSecurityGroupIngress.json  ec2_CreateSecurityGroup.json  ec2_ModifySecurityGroupRules.json  ec2_RevokeSecurityGroupEgress.json  ec2_RevokeSecurityGroupIngress.json  ec2_RunInstances_multi.json  ec2_RunInstances_single.json  ecr_CreateRepository.json  ecs_CreateCluster.json  eks_CreateCluster.json  elasticache_CreateCacheCluster.json  elasticache_CreateReplicationGroup.json  es_CreateDomain.json  (+20 more)
(+21 files in other folders)
