[project]
name = "cloudtrail-watcher"
version = "0.1.4"
description = "Watch CloudTrail events and notify via Slack Webhook and SNS"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.42.34",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
]

[tool.pytest]
testpaths = ["test"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
pythonpath = ["layer/python"]
addopts = ["-v", "--tb=short"]
